fixing deforestation risk table header alignment

--- a/frontend/styles/components/profiles/area-table.scss
+++ b/frontend/styles/components/profiles/area-table.scss
@@ -30,9 +30,11 @@
         vertical-align: middle;
         min-width: 150px;
 
-        > div {
+        .align-content-right {
           display: flex;
           align-items: center;
+          justify-content: flex-end;
+          text-align: right;
         }
 
         &:not(:first-child) {
